--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
              <i class='fa fa-search -bottom'></i>
                 </div>
              <div class='btn'>
-                <button><a href='#'>Back to Home</button>
+                <button>Back to Home</button>
              </div>
         </div>
     </div>
